# SentinelRAG

./: .env.example  .gitignore  GEMINI.md  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  cve_ingestion.py  db_setup.py  rag_chain.py
