[project]
name = "sentinelrag"
version = "0.1.0"
description = "Production-grade RAG application for security intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "streamlit>=1.30.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    
    # Database
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    
    # HTTP Client
    "requests>=2.31.0",
    
    # Observability
    "langsmith>=0.0.87",
    
    # Configuration
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
